<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ActivitySelector">

    <Button
        android:id="@+id/btnNotPressed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_not_pressed"
        android:fontFamily="casual"
        android:text="@string/btnNotPressed"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPressed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_pressed"
        android:fontFamily="casual"
        android:text="@string/btnPressed"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnDisabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNotPressed" />

    <Button
        android:id="@+id/btnDisabled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_disabled"
        android:fontFamily="casual"
        android:text="@string/btnDisabled"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPressed" />

    <Button
        android:id="@+id/btnButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:fontFamily="casual"
        android:text="@string/btnButton"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDisabled" />
</androidx.constraintlayout.widget.ConstraintLayout>